--- a/portfolio/CSA/app/css/common.css
+++ b/portfolio/CSA/app/css/common.css
@@ -22,6 +22,12 @@
   font-style: normal;
   src: url("../fonts/HelveticaNeueCyr/HelveticaNeueCyr-Light.ttf") format("truetype"); }
 
+@font-face {
+  font-family: "HelveticaNeueCyrMedium";
+  font-weight: normal;
+  font-style: normal;
+  src: url("../fonts/HelveticaNeueCyr/HelveticaNeueCyr-Medium.ttf") format("truetype"); }
+
 .link_trigger {
   position: relative; }
   .link_trigger .bg {
