--- a/portfolio/CSA/app/scss/_fonts.scss
+++ b/portfolio/CSA/app/scss/_fonts.scss
@@ -4,3 +4,4 @@
 @include font-face("HelveticaNeueCyrRoman", "../fonts/HelveticaNeueCyr/HelveticaNeueCyr-Roman");
 @include font-face("HelveticaNeueCyrBold", "../fonts/HelveticaNeueCyr/HelveticaNeueCyr-Bold");
 @include font-face("HelveticaNeueCyrLight", "../fonts/HelveticaNeueCyr/HelveticaNeueCyr-Light");
+@include font-face("HelveticaNeueCyrMedium", "../fonts/HelveticaNeueCyr/HelveticaNeueCyr-Medium");
